--- a/index.html
+++ b/index.html
@@ -5,134 +5,135 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Átila Vasconcelos Homepage</title>
+    <link rel="stylesheet" href="./styleIndex.css">
 </head>
 <body>
-    <h1>Átila Vasconcelos</h1>
+    <h1 class="label3" class="label5">Átila Vasconcelos</h1>
     <p>
         <em>
             Desenvolvedor WEB FULLSTACK em formação <br>
-            Estudante de TI -  <a href="https://al.senai.br/">SENAI/AL</a> <br>
-            Estudante do novo ensino médio - <a href="https://al.sesi.com.br/">SESI/AL</a> <br>
+            Estudante de TI -  <a href="https://al.senai.br/" class="label4">SENAI/AL</a> <br>
+            Estudante do novo ensino médio - <a href="https://al.sesi.com.br/" class="label4">SESI/AL</a> <br>
             Professor de teoria musical <br>
             Redes sociais: <br>
-            <a href="https://github.com/AtilaVasck">GitHub</a> <br> 
-            <a href="https://www.instagram.com/atila_vasck/">Instagram/Conta primária</a> <br>
-            <a href="https://www.instagram.com/sei.la_vasck/">Instagram/Conta secundária</a> <br>
+            <a href="https://github.com/AtilaVasck" class="label4">GitHub</a> <br> 
+            <a href="https://www.instagram.com/atila_vasck/" class="label4">Instagram/Conta primária</a> <br>
+            <a href="https://www.instagram.com/sei.la_vasck/" class="label4">Instagram/Conta secundária</a> <br>
             Maceió-AL
         </em>
     </p>
-    <p>
+    <p class="label">
         Eu sou um poeta, amante de música. Adoro observar problemas para resolvê-los, é um execelente exercício, não? Enfim, gosto de enigmas, de cozinhar, de tocar instrumentos e de criar linhas de código com "do while" haha! Também, sou um enorme fã de animais, pois, eles conseguem acalmar os nervos do "relacionamento tóxico". P.S: O tóxico do relacionamento é o javascript...
     </p>
     <hr>
-    <h2>Formação Acadêmica</h2>
+    <h2 class="label2">Formação Acadêmica</h2>
     <ul>
-        <li>Medalhista de ouro da mobfog</li>
-        <li>Medalhista de prata nas olimpíadas de matemática</li>
-        <li>Curso de Sistema de controle financeiro</li>
-        <li>Curso em teoria musical</li>
-        <li>Estudante de TI</li>
-        <li>Estudante do 2º do ensino médio</li>
+        <li class="label">Medalhista de ouro da mobfog</li>
+        <li class="label">Medalhista de prata nas olimpíadas de matemática</li>
+        <li class="label">Curso de Sistema de controle financeiro</li>
+        <li class="label">Curso em teoria musical</li>
+        <li class="label">Estudante de TI</li>
+        <li class="label">Estudante do 2º do ensino médio</li>
     </ul>
 
     <hr>
 
-    <h2>Experiência Profissional</h2>
+    <h2 class="label2">Experiência Profissional</h2>
     <table border="3">
         <thead>
             <tr>
-                <td><Strong>Ano</Strong></td>
-                <td><strong>Experiência</strong></td>
+                <td><Strong class="label">Ano</Strong></td>
+                <td><strong class="label">Experiência</strong></td>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>2023</td>
-                <td>Vendas de Doces</td>
+                <td class="label">2023</td>
+                <td class="label">Vendas de Doces</td>
             </tr>
             <tr>
-                <td>2023</td>
-                <td>JEEP</td>
+                <td class="label">2023</td>
+                <td class="label">JEEP</td>
             </tr>
             <tr>
-                <td>2022-2023</td>
-                <td>FAPEAL</td>
+                <td class="label">2022-2023</td>
+                <td class="label">FAPEAL</td>
             </tr>
             <tr>
-                <td>2022-2023</td>
-                <td>Professor de teoria musical</td>
+                <td class="label">2022-2023</td>
+                <td class="label">Professor de teoria musical</td>
             </tr>
             <tr>
-                <td>2022-2023</td>
-                <td>Professor de instrumentos(vilão e teclado)</td>
+                <td class="label">2022-2023</td>
+                <td class="label">Professor de instrumentos(vilão e teclado)</td>
             </tr>
             <tr>
-                <td>2022</td>
-                <td>Assistente de cozinha</td>
+                <td class="label">2022</td>
+                <td class="label">Assistente de cozinha</td>
             </tr>
             <tr>
-                <td>2022</td>
-                <td>Cantor de bar</td>
+                <td class="label">2022</td>
+                <td class="label">Cantor de bar</td>
             </tr>
             <tr>
-                <td>2021</td>
-                <td>Garçom de festas</td>
+                <td class="label">2021</td>
+                <td class="label">Garçom de festas</td>
             </tr>
         </tbody>
     </table>
 
     <hr>
-    <h2>Minhas Habilidades</h2>
+    <h2 class="label2">Minhas Habilidades</h2>
     <table>
         <tbody>
             <tr>
-                <td>Melhores slides</td>
+                <td class="label">Melhores slides</td>
                 <td>⭐⭐⭐⭐⭐</td>
             </tr>
             <tr>
-                <td>Oratória</td>
+                <td class="label">Oratória</td>
                 <td>⭐⭐⭐⭐⭐</td>
             </tr>
             <tr>
-                <td>Poeta</td>
+                <td class="label">Poeta</td>
                 <td>⭐⭐⭐⭐⭐</td>
             </tr>
             <tr>
-                <td>Instrutor de TM</td>
+                <td class="label">Instrutor de TM</td>
                 <td>⭐⭐⭐⭐⭐</td>
             </tr>
             <tr>
-                <td>Jogador de tabuleiro/cartas</td>
+                <td class="label">Jogador de tabuleiro/cartas</td>
                 <td>⭐⭐⭐⭐</td>
             </tr>
             <tr>
-                <td>Escritor</td>
+                <td class="label">Escritor</td>
                 <td>⭐⭐⭐⭐</td>
             </tr>
             <tr>
-                <td>Violão</td>
+                <td class="label">Violão</td>
                 <td>⭐⭐⭐⭐</td>
             </tr>
             <tr>
-                <td>Cantor</td>
+                <td class="label">Cantor</td>
                 <td>⭐⭐⭐</td>
             </tr>
             <tr>
-                <td>Lutador de artes marciais</td>
+                <td class="label">Lutador de artes marciais</td>
                 <td>⭐⭐⭐</td>
             </tr>
             <tr>
-                <td>cozinheiro</td>
+                <td class="label">cozinheiro</td>
                 <td>⭐⭐⭐</td>
             </tr>
             <tr>
-                <td>Desenvolvedor WEB</td>
+                <td class="label">Desenvolvedor WEB</td>
                 <td>⭐⭐</td>
             </tr>
         </tbody>
     </table>
     <hr>
-    <h3><a href="./hobby.html">Hobby</a></h3>
-    <h3><a href="./contato.html">Contato</a></h3>
+    <h3><a href="./hobby.html" class="label4">Hobby</a></h3>
+    <h3><a href="./contato.html" class="label4">Contato</a></h3>
 </body>
 </html>
